--- a/html/css/style.css
+++ b/html/css/style.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css?family=Fira+Code&display=swap');
-
 body {
     position: relative;
     font-family: sans-serif;
@@ -10,154 +9,119 @@ body {
 }
 
 .container {
-  height: 100vh;
-  display:none;
+    height: 100vh;
+    display: none;
 }
 
 .radio-container {
-  position: absolute;
-  bottom: -56vh;
-  right: 15vh;
+    position: absolute;
+    bottom: -56vh;
+    right: 15vh;
 }
 
 .radio {
-  width: 18vh;
-  -moz-user-select: -moz-none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -o-user-select: none;
-  user-select: none;
+    width: 18vh;
+    -moz-user-select: -moz-none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 
-#submit {
-  position: absolute;
-  width: 3.5vh;
-  height: 3.0vh;
-  bottom: 10vh;
-  left: 2.0vh;
-  border-radius: 5px;
-  transition: all 0.1s linear;
+button {
+    position: absolute;
+    background: transparent;
+    border-radius: 5px;
+    transition: all 0.1s linear;
+    border: none;
 }
 
-#submit:hover {
-  background: rgba(255, 255, 255, 0.25);
+button:hover {
+    background: rgba(255, 255, 255, 0.25);
+}
+
+#volume-up,
+#volume-down,
+#increase-channel,
+#decrease-channel {
+    width: 3.8vh;
+    height: 3.8vh;
+}
+
+#connect,
+#disconnect {
+    width: 3.5vh;
+    height: 3.0vh;
+}
+
+#connect {
+    bottom: 10vh;
+    left: 2.0vh;
 }
 
 #disconnect {
-  position: absolute;
-  width: 3.5vh;
-  height: 3.0vh;
-  bottom: 10vh;
-  right: 2.0vh;
-  border-radius: 5px;
-  transition: all 0.1s linear;
+    bottom: 10vh;
+    right: 1.7vh;
 }
 
-#disconnect:hover {
-  background: rgba(255, 255, 255, 0.25);
+#volume-up {
+    bottom: 29.5vh;
+    right: 0.9vh;
 }
 
-#volumeUp {
-  position: absolute;
-  width: 3.8vh;
-  height: 3.7vh;
-  bottom: 29.5vh;
-  right: 0.9vh;
-  border-radius: 5px;
-  transition: all 0.1s linear;
+#volume-down {
+    bottom: 18.5vh;
+    right: 0.9vh;
 }
 
-#volumeUp:hover {
-  background: rgba(255, 255, 255, 0.25);
+#increase-channel {
+    bottom: 29.5vh;
+    left: 0.8vh;
 }
 
-#volumeDown {
-  position: absolute;
-  width: 3.8vh;
-  height: 3.6vh;
-  bottom: 18.5vh;
-  right: 0.9vh;
-  border-radius: 5px;
-  transition: all 0.1s linear;
+#decrease-channel {
+    bottom: 18.5vh;
+    left: 0.8vh;
 }
 
-#volumeDown:hover {
-  background: rgba(255, 255, 255, 0.25);
-}
-
-#increaseradiochannel {
-  position: absolute;
-  width: 3.8vh;
-  height: 3.8vh;
-  bottom: 29.5vh;
-  left: 0.8vh;
-  border-radius: 5px;
-  transition: all 0.1s linear;
-}
-
-#increaseradiochannel:hover {
-  background: rgba(255, 255, 255, 0.25);
-}
-
-#decreaseradiochannel {
-  position: absolute;
-  width: 3.8vh;
-  height: 3.6vh;
-  bottom: 18.5vh;
-  left: 0.8vh;
-  border-radius: 5px;
-  transition: all 0.1s linear;
-}
-
-#decreaseradiochannel:hover {
-  background: rgba(255, 255, 255, 0.25);
-}
-
-#poweredOff {
-  position: absolute;
-  width: 3.3vh;
-  height: 2.9vh;
-  bottom: 50vh;
-  left: 0.0vh;
-  border-radius: 5px;
-  transition: all 0.1s linear;
-}
-
-#poweredOff:hover {
-  background: rgba(255, 255, 255, 0.25);
+#power-off {
+    width: 3.3vh;
+    height: 2.9vh;
+    bottom: 40vh;
+    right: 2.2vh;
 }
 
 .onoff button {
-  padding: 40px 55px;
-  opacity: .0;
+    padding: 40px 55px;
+    opacity: 0;
 }
 
 .channel {
-  position: absolute;
-  bottom: 24vh;
-  left: 5.3vh;
-  background: none;
+    position: absolute;
+    bottom: 24vh;
+    left: 5.3vh;
+    background: none;
 }
 
 ::-webkit-input-placeholder {
-  color: rgba(0, 0, 0, 0.5);
+    color: rgba(0, 0, 0, 0.5);
 }
 
 .channel span {
-  text-align: center;
-  color: rgba(0, 0, 0, 0.75);
+    text-align: center;
+    color: rgba(0, 0, 0, 0.75);
 }
 
 .channel input {
-  text-align: center;
-  border: none;
-  font-size: 25px;
-  background: none;
-  outline: none;
-  font-family: 'Fira Code', monospace;
-  width: 5vw;
+    text-align: center;
+    border: none;
+    font-size: 25px;
+    background: none;
+    outline: none;
+    font-family: 'Fira Code', monospace;
+    width: 5vw;
 }
 
 ::-webkit-inner-spin-button {
-  display: none;
+    display: none;
 }
